--- a/LPEnBici/.classpath
+++ b/LPEnBici/.classpath
@@ -65,5 +65,6 @@
 			<attribute name="owner.project.facets" value="jst.jsf"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aspectjrt.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
