--- a/LPEnBici/WebContent/WEB-INF/web.xml
+++ b/LPEnBici/WebContent/WEB-INF/web.xml
@@ -40,7 +40,7 @@
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
         <param-name>jersey.config.server.provider.packages</param-name>
-        <param-value>aspecto</param-value>
+        <param-value>rest</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
