--- a/LPEnBici/.classpath
+++ b/LPEnBici/.classpath
@@ -66,5 +66,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aspectjrt.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gmaps4jsf-1.1.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
