Continuación entrega final
Funcionalidad del mapa a partir de los Beans, tanto para administrador
como para usuario.
--Faltaria que desde allí pueda acceder a la información completa de la
estación, pero no pude agregar algún link o algo que complete la acción
de EstacionBean.
--No pude cambiar el tamaño del mapa
--Se puede hacer que para el Administrador se vean las estaciones no
eliminadas y para el usuario solo las operativas.
--Para el uso correcto de los mapas, se deben incluir:
------- gmaps4jsf-1.1.4.jar
------- gmaps4jsf-core-1.1.jar
------- gmaps4jsf-core-3.0.0,jar

--- a/LPEnBici/.classpath
+++ b/LPEnBici/.classpath
@@ -66,6 +66,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aspectjrt.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gmaps4jsf-core-3.0.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gmaps4jsf-1.1.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gmaps4jsf-core-1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
